# tetrs

./: .gitignore  Cargo.toml  README.md
Gallery/Screencasts/: tetrs_puzzle-mode-solutions.webm
src/: console.rs  game_logic.rs  main.rs  rotation_systems.rs  tetromino_generators.rs
src/backend/: game.rs  mod.rs  rotation_systems.rs  tetromino_generators.rs
src/frontend/: console.rs
src/frontend/terminal/: game_input_handler.rs  game_input_handlers.rs  game_renderer.rs  input_handlers.rs  mod.rs
tetrs_app_terminal/src/: game_screen_renderers.rs  input_handler.rs  main.rs  terminal_tetrs.rs
tetrs_engine/src/: lib.rs  piece_rotation.rs  rotation_systems.rs  tetromino_generators.rs
tetrs_lib/src/: lib.rs  rotation_systems.rs  tetromino_generators.rs
tetrs_terminal/: Cargo.toml  tetrs_terminal.json
tetrs_terminal/src/: game_input_handler.rs  game_mods.rs  game_renderers.rs  game_screen_renderers.rs  main.rs  puzzle_mode.rs  terminal_tetrs.rs
tetrs_terminal/src/game_mods/: mod.rs  puzzle_mode.rs
tetrs_terminal/src/game_renderers/: cached.rs  immediate.rs  mod.rs  naive.rs
