[package]
name = "tetrs_terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = { version = "3.9.0", features = ["json"] }
tetrs_engine = { path = "../tetrs_engine", features = ["serde"] }
